# harmonie

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  devenv.nix  flake.nix  rust-toolchain.toml
browser/: Cargo.toml
browser/lib/: Cargo.toml
browser/lib/src/: codec.rs  lib.rs
browser/src/: command.rs  main old.rs  main.rs  signal.rs
codegen/: README.md
crates/api/: Cargo.toml
crates/api/src/: lib.rs  runtime.rs
crates/api/src/ecs/: component.rs  generic.rs  mod.rs  resource.rs
crates/api/src/ecs/system/: function_system.rs  mod.rs  schedule.rs  system_param.rs  system_set.rs
crates/api/src/ecs/system/params/: commands.rs  mod.rs  resource.rs
crates/api/src/internal/: manifest.rs
crates/api/src/runtime/: ffi.rs  mod.rs
crates/api/src/schema/: a_mod.rs  mod.rs
crates/bevy_harmonize/: Cargo.toml
crates/bevy_harmonize/api/: Cargo.toml
crates/bevy_harmonize/api/src/: lib.rs
crates/bevy_harmonize/api/src/ecs/: component.rs  const_vec.rs  mod.rs  resource.rs
crates/bevy_harmonize/api/src/ecs/system/: function_system.rs  mod.rs  system.rs  system_config.rs  system_param.rs
crates/bevy_harmonize/api/src/ecs/system/params/: commands.rs
crates/bevy_harmonize/api/src/ecs/system/schedule/: chain.rs  mod.rs
crates/bevy_harmonize/api/src/init/: feature.rs  manifest.rs  mod.rs  runtime.rs  schema.rs
crates/bevy_harmonize/api/src/internal/: manifest.rs  mod.rs  type_signatures.rs
crates/bevy_harmonize/api/src/schema/: a_mod.rs  mod.rs
crates/bevy_harmonize/common/: Cargo.toml
crates/bevy_harmonize/common/src/: const_vec.rs  identifiers.rs  lib.rs  schedule.rs  type_signature.rs
crates/bevy_harmonize/src/: file_watcher.rs  lib.rs
crates/bevy_harmonize/src/devtools/: mod.rs
crates/bevy_harmonize/src/mods/loaded/: feature.rs  mod.rs  schedule.rs
crates/bevy_harmonize/src/mods/schedule/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: identifiers.rs  lib.rs  schedule.rs  utils.rs
crates/const_vec/: Cargo.toml
crates/const_vec/src/: lib.rs
crates/harmonie_client/: Cargo.toml
crates/harmonie_client/src/: main.rs
crates/harmony_client/: Cargo.toml
crates/harmony_client/src/: main.rs
crates/modding/: Cargo.toml
crates/modding/api/: Cargo.toml
crates/modding/api/src/: lib.rs  utils.rs
crates/modding/src/: lib.rs  utils.rs
crates/modding/src/ecs/: component.rs  mod.rs  resource.rs  schedule.rs  stable_id.rs
crates/modding/src/ecs/system/: descriptor.rs  function_system.rs  mod.rs  system.rs  system_config.rs  system_param.rs
crates/modding/src/ecs/system/params/: commands.rs
crates/modding/src/init/: feature.rs  manifest.rs  mod.rs  runtime.rs
crates/modloader/: Cargo.toml  README.md
crates/modloader/api/: Cargo.toml
crates/modloader/api/src/: graph.rs  identifiers.rs  lib.rs  schedule.rs
crates/modloader/src/: file_watcher.rs  instance.rs  lib.rs
crates/modloader/src/mods/: feature.rs  loaded.rs  loading.rs  mod.rs
crates/modloader/src/mods/loaded/: feature.rs  mod.rs  schedule.rs
crates/modloader/src/mods/schedule/: graph.rs  loaded.rs  mod.rs
crates/modloader/src/schedule/: graph.rs  loaded.rs  mod.rs  set.rs
crates/modloader/src/scheduler/: builder.rs  mod.rs
crates/wasmtest/: Cargo.toml
crates/wasmtest/src/: lib.rs
examples/: client.rs
mods/examples/: my_cube.rs  the_cube.rs
mods/the_cube/: Cargo.toml
mods/the_cube/src/: lib.rs
mods/the_cube_mover/: Cargo.toml
mods/the_cube_mover/src/: lib.rs
mods/the_cube_spinner/: Cargo.toml
mods/the_cube_spinner/src/: lib.rs
src/devtools/: mod.rs
src/mods/loaded/: schedule.rs
