[workspace]
resolver = "2"
members = [
    "crates/*",
    "crates/bevy_harmonize/api",
    "crates/bevy_harmonize/build",
    "crates/bevy_harmonize/common",
]

[workspace.dependencies]
bitcode = { version = "0", features = ["derive"] }
async-channel = "2.3"
async-process = "2.2"
async-std = "1.12"
async-fs = "2.1"
bart = "0.1"
bart_derive = "0.1"
bevy = "0.15"
bevy_app = "0.15"
bevy_ecs = "0.15"
bevy_ecs_macros = "0.15"
bevy_tasks = "0.15"
bevy_reflect = "0.15"
bevy_utils = "0.15"
bevy_utils_proc_macros = "0.15"
const-str = "0.5"
const_panic = "0.2"
clap = "4.5"
dunce = "1.0"
futures-concurrency = "7.6"
futures-lite = "2.5"
notify = "7"
petgraph = "0.6"
rancor = "0.1"
sha2 = "0.10"
wasmer = "5.0"

# Enable small optimizations for local code
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 2 # TODO Set to 3 once stuff starts to stabilize
