[package]
name = "bevy_harmonize"
description = "A familiar, yet powerful take on a modding system for the Bevy game engine"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "crates/common" }
bevy_harmonize_build = { path = "crates/build" }

async-channel.workspace = true
async-fs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_tasks.workspace = true
bevy_utils.workspace = true
bitcode.workspace = true
futures-lite.workspace = true
notify.workspace = true
petgraph.workspace = true
rancor.workspace = true
sha2.workspace = true
wasmer.workspace = true

[workspace]
resolver = "2"
members = ["crates/*", "codegen/crates/*"]

[workspace.dependencies]
bitcode = { version = "0", features = ["derive"] }
async-channel = "2.3"
async-process = "2.2"
async-std = "1.12"
async-fs = "2.1"
bart = "0.1"
bart_derive = "0.1"
bevy = "0.15"
bevy_app = "0.15"
bevy_ecs = "0.15"
bevy_ecs_macros = "0.15"
bevy_tasks = "0.15"
bevy_reflect = "0.15"
bevy_reflect_derive = "0.15"
bevy_utils = "0.15"
bevy_utils_proc_macros = "0.15"
const-str = "0.5"
const_panic = "0.2"
clap = "4.5"
dunce = "1.0"
futures-concurrency = "7.6"
futures-lite = "2.5"
notify = "7"
petgraph = "0.6"
rancor = "0.1"
sha2 = "0.10"
wasmer = "5.0"

# Enable small optimizations for local code
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 2 # TODO Set to 3 once stuff starts to stabilize
