[package]
name = "harmony_browser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", default-features = false, features = [
    "multi_threaded",
] }

harmony_modloader = { path = "../crates/modloader" }
harmony_modloader_build = { path = "../crates/modloader/build" }
