[package]
name = "bevy_harmonize_api"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "../common" }
const_vec = { package = "const_vec", path = "../const_vec" }

bitcode = { workspace = true, features = ["serde"] }
bevy_math.workspace = true
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
bevy_transform.workspace = true
bevy_utils_proc_macros.workspace = true
const_panic.workspace = true
serde.workspace = true

[features]
generate_manifest = []
test = []
wasm_runtime = []
