[package]
name = "bevy_harmonize"
description = "A minimal ecs runtime for harmony mods"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "common" }
bevy_harmonize_build = { path = "../bevy_harmonize/build" }

async-channel.workspace = true
async-fs.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_ecs_macros.workspace = true
bevy_tasks.workspace = true
bevy_utils.workspace = true
bitcode.workspace = true
futures-lite.workspace = true
notify.workspace = true
petgraph.workspace = true
rancor.workspace = true
sha2.workspace = true
wasmer.workspace = true
