[package]
name = "bevy_harmonize_common"
description = "The ABI between the modloader and the modding library. Named 'common' to avoid confusing 'abi' with 'api'."
version = "0.0.0"
edition = "2021"

[dependencies]
bitcode.workspace = true
bevy_reflect.workspace = true
bevy_reflect_derive.workspace = true
