[package]
name = "harmony_client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, default-features = false, features = [
    "multi_threaded",
] }

bevy_harmonize = { path = "../bevy_harmonize" }
bevy_harmonize_build = { path = "../bevy_harmonize/build" }
