[package]
name = "harmony_modloader"
description = "A minimal ecs runtime for harmony mods"
version = "0.0.0"
edition = "2021"

[dependencies]
harmony_modloader_api = { path = "api" }

async-channel = "2.3.1"
async-fs = "2.1.2"
bevy_app = "0.14.0"
bevy_ecs = "0.14.0"
bevy_ecs_macros = "0.14.0"
bevy_tasks = "0.14.0"
bevy_utils = "0.14.0"
bitcode = { version = "0", features = ["derive"] }
futures-lite = "2.3.0"
notify = "6.1"
sha2 = "0.10.8"
wasmer = "4.3.3"
