[package]
name = "the_cube"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
harmony_modding = { path = "../../crates/modding" }

bitcode = { version = "0", features = ["derive"] }

[features]
# this feature is used for production builds
# DO NOT REMOVE!!
generate_manifest = ["harmony_modding/generate_manifest"]
