[package]
name = "the_cube"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
harmony_modding = { path = "../../crates/modding" }

bitcode = { version = "0", features = ["derive"] }

[features]
# these features are used for building mods
# DO NOT REMOVE!!
wasm_runtime = ["harmony_modding/wasm_runtime"]
generate_manifest = ["harmony_modding/generate_manifest"]
