[package]
name = "the_cube"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
api = { package = "bevy_harmonize_api", path = "../../crates/bevy_harmonize/api" }

bitcode.workspace = true

[features]
# these features are used for building mods
# DO NOT REMOVE!!
wasm_runtime = ["api/wasm_runtime"]
generate_manifest = ["api/generate_manifest"]
