[package]
name = "bevy_harmonize_api"
version = "0.0.0"
edition = "2021"

[dependencies]
common = { package = "bevy_harmonize_common", path = "../common" }
const_vec = { package = "const_vec", path = "../../const_vec" }

bitcode.workspace = true
bevy_reflect.workspace = true
bevy_utils_proc_macros.workspace = true

[features]
generate_manifest = []
wasm_runtime = []
